# NEXUS

./: .env.example  .gitignore  README.md  pyproject.toml
src/nexus/: __init__.py  __main__.py  app.py  server.py
src/nexus/agents/: __init__.py  base.py  consensus.py  coordinator.py  critic.py  executor.py  message_bus.py  orchestrator.py  planner.py  pool.py  researcher.py  task.py
src/nexus/core/: __init__.py  config.py  errors.py  event_bus.py  events.py  lifecycle.py  registry.py
src/nexus/interfaces/: __init__.py
src/nexus/interfaces/api/: __init__.py  app.py
src/nexus/interfaces/api/routes/: __init__.py
src/nexus/interfaces/cli/: __init__.py  app.py
src/nexus/llm/: __init__.py  base.py  router.py  schemas.py
src/nexus/llm/providers/: anthropic.py  openai.py
src/nexus/memory/: __init__.py  consolidation.py  embeddings.py  episodic.py  manager.py  semantic.py  store.py  working.py
src/nexus/security/: __init__.py  audit.py  capabilities.py  policies.py  rate_limiter.py  sandbox.py
src/nexus/skills/: __init__.py  base.py  loader.py  registry.py
src/nexus/skills/builtin/: __init__.py  code_exec.py  file_ops.py  notes.py  shell.py  web_search.py
tests/: conftest.py
tests/unit/: test_capabilities.py  test_config.py  test_consensus.py  test_event_bus.py  test_message_bus.py  test_task_dag.py  test_working_memory.py
