[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-agent"
version = "0.1.0"
description = "NEXUS: Network of Evolving eXpert Unified Systems — A next-gen AI agent framework"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Tushar" }]
dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "anthropic>=0.40",
    "openai>=1.50",
    "httpx>=0.27",
    "rich>=13.0",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "structlog>=24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.30", "websockets>=12.0"]
telegram = ["python-telegram-bot>=21.0"]
discord = ["discord.py>=2.4"]
ollama = ["ollama>=0.3"]
all = ["nexus-agent[api,telegram,discord,ollama]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
nexus = "nexus.app:main"
nexus-server = "nexus.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
